test/features/errors/runtime/e3008_function_not_found.spl
# E3008: Function Not Found

Feature: E3008 - Function Not Found at Runtime
  As a Simple runtime
  I want to detect when functions are not found
  So that dynamic loading issues are caught

  Background:
    Given I have the Simple runtime

  Scenario: Calling non-existent function dynamically
    When I run:
      '''
      fn test():
        val fn_name = "nonexistent_function"
        # Runtime error: function not found
        call_by_name(fn_name)
      '''
    Then I should see runtime error E3008
    And the error message should be "function `{name}` not found"
    And the label should indicate "function not found at runtime"
    And the help should suggest "ensure the function is loaded and available"

  Scenario: Valid dynamic call
    When I run:
      '''
      fn my_function():
        print("Hello")

      fn test():
        val fn_name = "my_function"
        call_by_name(fn_name)  # OK
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      fn test():
        call_by_name("missing")
      '''
    Then I should see runtime error E3008
    And the error message should contain "함수를 찾을 수 없음"
